prover-ray/zkcdriver/testdata/synced/invalid/if_04.zkc
//error:4:11-12:expected type u8
fn f(x:u8, y:u16) -> (r:u8) {
  r = 0
  if x == y {
    r = 1
    return
  }
  return
}
